v4.0.1-pre
----------

* Reduce configure time. Don't test for presence of standard C and C++ header files.

v4.0.0
------

* Provide option to chose summary type from short, normal (default) and long
* Fail the application if $HOME is not set [#38]
* Trailing whitespaces in a custom category file are ignored
* Handle .desktop files that contain multiple sections. Look for entries under "[Desktop Entry]"
* Create puppet PET packages on drone.io (https://drone.io/github.com/chiku/mjwm/files)
* Introduce an XDG compliant icon scan (based on http://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html) [#33]
* Read comments from .desktop files. These would be used as tooltips once JWM supports them [#41]
* Allow the user to specify the name of the icon theme to use [#36]
* Backup older output file if it exists [#39, #43]
* Reduce the verbosity of summary output
* Read environment variables LAMGUAGE, LC_ALL & LANG in that order to figure out the system language. This language is chosen for builing the menu [#42]
* Accept the language to build menus from command line. This would override the system defaults [#40]

v3.0.0
------

* Ignore desktop files that are marked NoDisplay=true [#31]
* Increased conformance to Google C++ style-guide, http://google-styleguide.googlecode.com/svn/trunk/cppguide.xml
* Migrate tests to catch
* Drops deprecated command-line arguments [-s, -h and -v]
* Fixes a bug that caused desktop file entries in $XDG_DATA_HOME to be ignored
* Drop -a and --append-png command-line options [#34]
* Recursively scan inside sub-directories of $XDG_DATA_HOME & $XDG_DATA_DIRS for desktop files [#29]
* Search for icons (png, svg, xpm) in $HOME/.icons, $XDG_DATA_DIRS/icons & /usr/share/pixmaps when command-line option --iconize is specified [#35]
* Desktop files that couldn't be open are reported as unparsed [#37]
* Suppress duplicate entries in a single subcategory [#14]
* Default output file is $HOME/.jwmrc-mjwm